--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Digital codon
+email: benmeradi.lilyanezli@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/digital-codon" # the subpath of your site, e.g. /blog
-url: "https://nezlicodes.io" # the base hostname & protocol for your site
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://digital-codon.io" # the base hostname & protocol for your site
 twitter_username: nezlicodes
 github_username:  nezlicodes
 
